switched default report generator from jasper to our own report generation engine

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -10,11 +10,6 @@
 ## path to the directory where the lucene search index should be created
 lucene.index.path = lucene-index
 
-## base directory for all report related stuff
-reports.directory = reports
-reports.templates.searchresults = ${reports.directory}/SearchResultReport
-#reports.templates.searchresults = src/reports/SearchResultReport.jrxml
-
 ######################
 ## cluster settings ##
 ######################
@@ -38,16 +33,24 @@ service.ContentFetchService=net.sf.iquiver.service.impl.ContentFetchService
 service.ContentFetchService.autostart=true
 service.ContentFetchService.restartOnFailure=3
 
-#service.ContentSearchService=net.sf.iquiver.service.impl.ContentSearchService
-#service.ContentSearchService.autostart=false
-#service.ContentSearchService.schedule=00:00:00,DAYLY #ONCE|DAYLY|WEEKLY|EVERY
-#service.ContentSearchService.restartOnFailure=3
+service.ContentSearchService=net.sf.iquiver.service.impl.ContentSearchService
+service.ContentSearchService.autostart=false
+service.ContentSearchService.schedule=00:00:00,DAYLY #ONCE|DAYLY|WEEKLY|EVERY
+service.ContentSearchService.restartOnFailure=3
 
 service.ContentCollectorService=net.sf.iquiver.service.impl.ContentCollectorService
 service.ContentCollectorService.autostart=true
 service.ContentCollectorService.schedule=03:30:00,DAYLY
 service.ContentCollectorService.restartOnFailure=3
 
+#######################
+## report generator  ##
+#######################
+
+reports.directory = reports
+#reports.ReportGenerator.impl=net.sf.iquiver.report.impl.JasperReportGenerator
+reports.ReportGenerator.impl=net.sf.iquiver.report.impl.DefaultReportGenerator
+reports.templates.searchresults = ${reports.directory}/SearchResultReport
 
 #######################
 ## remote interfaces ##
