*** empty log message ***

--- a/InfoQuiver/src/conf/log.properties
+++ b/InfoQuiver/src/conf/log.properties
@@ -13,12 +13,12 @@ log4j.appender.default = org.apache.log4j.ConsoleAppender
 log4j.appender.default.layout = org.apache.log4j.PatternLayout
 log4j.appender.default.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 
-log4j.appender.iquiver = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.iquiver.file = iquiver.log
-log4j.appender.iquiver.DatePattern='.'yyyy-MM-dd
-log4j.appender.iquiver.layout = org.apache.log4j.PatternLayout
-log4j.appender.iquiver.layout.conversionPattern = %d %-5p %c - %m%n
-log4j.appender.iquiver.append = false
+#log4j.appender.iquiver = org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.iquiver.file = iquiver.log
+#log4j.appender.iquiver.DatePattern='.'yyyy-MM-dd
+#log4j.appender.iquiver.layout = org.apache.log4j.PatternLayout
+#log4j.appender.iquiver.layout.conversionPattern = %d %-5p %c - %m%n
+#log4j.appender.iquiver.append = false
 
 log4j.category.net.sf.iquiver = DEBUG
 log4j.category.net.sf.iquiver.om = WARN
