--- a/InfoQuiver/src/conf/log.properties
+++ b/InfoQuiver/src/conf/log.properties
@@ -8,7 +8,7 @@ org.apache.commons.logging.Log=org.apache.commons.logging.impl.Log4JLogger
 # log4j config
 #
 
-log4j.rootCategory = INFO, default, iquiver
+log4j.rootCategory = INFO, default 
 log4j.appender.default = org.apache.log4j.ConsoleAppender
 log4j.appender.default.layout = org.apache.log4j.PatternLayout
 log4j.appender.default.layout.conversionPattern = %d [%t] %-5p %c - %m%n
