*** empty log message ***

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -49,7 +49,7 @@ service.ContentSearchService.restartOnFailure=3
 ## report generator  ##
 #######################
 
-reports.directory = reports
+reports.directory = src/reports
 #reports.ReportGenerator.impl=net.sf.iquiver.report.impl.JasperReportGenerator
 reports.ReportGenerator.impl=net.sf.iquiver.report.impl.DefaultReportGenerator
 reports.templates.searchresults = ${reports.directory}/SearchResultReport
