reports moved from src/reports to /reports

--- a/InfoQuiver/src/conf/cache.properties
+++ b/InfoQuiver/src/conf/cache.properties
@@ -41,7 +41,7 @@ cache.type = Hybrid
 
 ## cache.enabledAtStartup ##
 ## should the cache be activated for all objects at startup?
-cache.enabledAtStartup = true
+cache.enabledAtStartup = false
 
 ## cache.enableCacheForCriteriaSelects ##
 ## Enables or disables the caching mechanism for caching results of doSelect(Criteria) in cache backed peers.
@@ -57,7 +57,7 @@ cache.enabledAtStartup = true
 ## More information on caching of torque generated objects can be found on the homepage of Torque:
 ## http://db.apache.org/torque/managers-cache.html
 ## Please note that the cache implementation used by IQuiver differs in mostly all parts from the default cache implementation of Torque.
-cache.enableCacheForCriteriaSelects = true
+cache.enableCacheForCriteriaSelects = false
 
 ## cache.excludeEnableAtStartUp ##
 ## Ignore CacheBackedPeers when enabling the cache at startup
