added smtp settings

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -26,7 +26,7 @@ cluster.multicast.properties = UDP(mcast_addr=228.1.2.3;mcast_port=55555;ip_ttl=
 ## ONCE|DAYLY|WEEKLY|EVERY ##
 #############################
 
-## only required if you want net.sf.iquiver.report.impl.JasperReportGenerator as report generator
+## only required if you want use net.sf.iquiver.report.impl.JasperReportGenerator as report generator
 #service.ReportCompileService=net.sf.iquiver.service.impl.ReportCompileService
 #service.ReportCompileService.autostart=true
 #service.ReportCompileService.restartOnFailure=3
@@ -54,6 +54,17 @@ reports.directory = reports
 #reports.ReportGenerator.impl=net.sf.iquiver.report.impl.JasperReportGenerator
 reports.ReportGenerator.impl=net.sf.iquiver.report.impl.DefaultReportGenerator
 reports.templates.searchresults = ${reports.directory}/SearchResultReport
+
+
+##############################
+## MAIL SMTP HOST SETTINGS  ##
+##############################
+
+smtp.host = localhost
+smtp.user = infoquiver
+smtp.password = infoquiver
+smtp.from = infoquiver@manskes.de
+
 
 #######################
 ## remote interfaces ##
