--- a/InfoQuiver/src/conf/log.properties
+++ b/InfoQuiver/src/conf/log.properties
@@ -8,20 +8,21 @@ org.apache.commons.logging.Log=org.apache.commons.logging.impl.Log4JLogger
 # log4j config
 #
 
-log4j.rootCategory = INFO, default 
+log4j.rootCategory = INFO, default
 log4j.appender.default = org.apache.log4j.ConsoleAppender
 log4j.appender.default.layout = org.apache.log4j.PatternLayout
 log4j.appender.default.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 
-#log4j.appender.iquiver = org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.iquiver.file = iquiver.log
-#log4j.appender.iquiver.DatePattern='.'yyyy-MM-dd
-#log4j.appender.iquiver.layout = org.apache.log4j.PatternLayout
-#log4j.appender.iquiver.layout.conversionPattern = %d %-5p %c - %m%n
-#log4j.appender.iquiver.append = false
+#log4j.appender.default = org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.default.file = iquiver.log
+#log4j.appender.default.DatePattern='.'yyyy-MM-dd
+#log4j.appender.default.layout = org.apache.log4j.PatternLayout
+#log4j.appender.default.layout.conversionPattern = %d %-5p %c - %m%n
+#log4j.appender.default.append = false
 
 log4j.category.net.sf.iquiver = DEBUG
 log4j.category.net.sf.iquiver.om = WARN
+log4j.category.net.sf.iquiver.util.om = WARN
 
 # ------------------------------------------------------------------------
 # S W A R M C A C H E
@@ -37,3 +38,5 @@ log4j.category.org.apache.torque=WARN
 # C O M M O N S
 # ------------------------------------------------------------------------
 log4j.category.org.apache.commons=WARN
+#log4j.category.org.apache.commons.httpclient=DEBUG
+#log4j.category.httpclient=DEBUG
