*** empty log message ***

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -7,6 +7,9 @@
 #
 # -------------------------------------------------------------------
 
+default.language=en
+default.locale=en_us
+
 ## path to the directory where the lucene search index should be created
 lucene.index.path = lucene-index
 
