*** empty log message ***

--- a/InfoQuiver/src/conf/iquiver.properties
+++ b/InfoQuiver/src/conf/iquiver.properties
@@ -1,6 +1,6 @@
 # -------------------------------------------------------------------
 #
-# This is the configuration file for IQuiver.
+# This is the configuration file for InfoQuiver.
 #
 # Note that strings containing "," (comma) characters must backslash
 # escape the comma (i.e. '\,')
@@ -75,11 +75,11 @@ smtp.from = infoquiver@manskes.de
 
 ## remote server interfaces to start ##
 ## these interfaces are servers used to communicate with client applications ##
-#startRemoteInterfaces=net.sf.iquiver.remote.xmlrpc.XmlRpcServer
+startRemoteInterfaces=net.sf.iquiver.remote.xmlrpc.XmlRpcServer
 
 ## port setting for the default XmlRpcServer implementation ##
 ## default is 80 ##
-#net.sf.iquiver.remote.xmlrpc.XmlRpcServer.port =
+net.sf.iquiver.remote.xmlrpc.XmlRpcServer.port = 81
 
 ## session timeout the started remote server interfaces in seconds ##
 ## default is 300 ##
