*** empty log message ***

--- a/infoquiver-web/WEB-INF/velocity.properties
+++ b/infoquiver-web/WEB-INF/velocity.properties
@@ -1,5 +1,12 @@
 velocimacro.library = vmacro.vm
 
+runtime.log.logsystem.class = org.apache.velocity.runtime.log.AvalonLogSystem
+runtime.log = d://u3_dev/jakarta-tomcat/logs/infoquiver.log
+runtime.log.error.stacktrace = true
+runtime.log.warn.stacktrace = true
+runtime.log.info.stacktrace = true
+runtime.log.invalid.references = true
+
 # Filepath for error template, 
 #  relative to web application root directory
 tools.view.servlet.error.template = error.vm
