--- a/infoquiver-web/.classpath
+++ b/infoquiver-web/.classpath
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="TOMCAT_HOME/common/lib/servlet.jar"/>
-	<classpathentry kind="var" path="TOMCAT_HOME/common/lib/jasper-runtime.jar"/>
 	<classpathentry kind="src" path="WEB-INF/src"/>
-	<classpathentry kind="src" path="work"/>
-	<classpathentry kind="src" path="/InfoQuiver"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/dom4j-1.4.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/xmlrpc-1.2-b1.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/commons-configuration-1.0-dev-3.20030607.194155.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/torque-3.1.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/velocity-tools-view-1.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/velocity-dep-1.3.1.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/xstream-1.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/jetty-5.1.1/lib/javax.servlet.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
